--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-amiri: var(--font-amiri);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -22,5 +23,17 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-amiri);
+}
+.parent {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(30, 1fr);
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+}
+.cell-3 {
+  grid-column-start: 3;
+  grid-column-end: 6;
+  text-align: center;
 }
