--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,13 +24,23 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: var(--font-amiri);
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold ;
 }
 .parent {
   display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  grid-template-rows: repeat(30, 1fr);
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
+  grid-template-columns: auto 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+  grid-template-rows: repeat(30, auto);
+  /* grid-column-gap: 10px;
+  grid-row-gap: 10px; */
+}
+.son {
+  display: grid;
+  grid-template-columns: auto 1fr 5fr 1fr ;
+  grid-template-rows: repeat(1, auto);
+  /* grid-column-gap: 10px;
+  grid-row-gap: 10px; */
 }
 .cell-3 {
   grid-column-start: 3;
