--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,21 +26,22 @@ body {
   font-family: var(--font-amiri);
   text-align: center;
   font-size: 20px;
-  font-weight: bold ;
-}
+  font-weight: bold ;}
+
 .parent {
+  align-content: center;
   display: grid;
   grid-template-columns: auto 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
   grid-template-rows: repeat(30, auto);
-  /* grid-column-gap: 10px;
-  grid-row-gap: 10px; */
+ 
 }
 .son {
+  align-content: center;
+
   display: grid;
   grid-template-columns: auto 1fr 5fr 1fr ;
   grid-template-rows: repeat(1, auto);
-  /* grid-column-gap: 10px;
-  grid-row-gap: 10px; */
+
 }
 .cell-3 {
   grid-column-start: 3;
