--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,8 @@ body {
   font-family: var(--font-amiri);
   text-align: center;
   font-size: 20px;
-  font-weight: bold ;}
+  font-weight: bold ;
+padding:15px}
 
 .parent {
   align-content: center;
