--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,26 +26,30 @@ body {
   font-family: var(--font-amiri);
   text-align: center;
   font-size: 20px;
-  font-weight: bold ;
-padding:15px}
+  font-weight: bold;
+  padding: 15px;
+}
 
 .parent {
   align-content: center;
   display: grid;
-  grid-template-columns: auto 1fr 1fr 1fr 1fr 1fr 1fr 1fr ;
+  grid-template-columns: auto 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-rows: repeat(30, auto);
- 
 }
 .son {
   align-content: center;
 
   display: grid;
-  grid-template-columns: auto 1fr 5fr 1fr ;
+  grid-template-columns: auto 1fr 5fr 1fr;
   grid-template-rows: repeat(1, auto);
-
 }
 .cell-3 {
   grid-column-start: 3;
   grid-column-end: 6;
   text-align: center;
+}
+@media (max-width: 991px) {
+  .bigDad {
+    width: 980px;
+  }
 }
